--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "gcp-metadata": "^5.0.0",
     "google-auth-library": "^7.14.1",
     "mongoose": "^6.3.0",
     "selfsigned": "^2.0.1"
