Finished Google Login Integration
Also added some minor halfdone Functions

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
+    "@angular/common": "~13.3.5",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "ng-google-one-tap": "^2.1.5",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tslib": "^2.4.0",
     "typescript": "~4.6.2"
   }
 }
